<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_activity_main_notification"
        android:icon="@drawable/notification"
        android:textSize="@dimen/text_size_low"
        android:title="@string/notfication_menu"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_activity_main_help"
        android:icon="@drawable/help"
        android:textSize="@dimen/text_size_low"
        android:title="@string/help"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_activity_main_about"
        android:textSize="@dimen/text_size_low"
        android:title="@string/about"
        app:showAsAction="collapseActionView" />
</menu>
