<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme_alt"
    tools:context=".ui.notifications.activities.NotificationActivity">
...
        android:orientation="vertical"


        >

        <EditText
            android:id="@+id/activity_search_search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:hint="@string/search_query_term"
            android:inputType="text"
...
                android:drawableEnd="@drawable/arrow_down"
                android:text="@string/end_date"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <include
            android:id="@+id/layout_search_categories"
            layout="@layout/checkbox_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_layout"
...
            android:dividerPadding="30dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:showDividers="beginning">

            <Button
                android:id="@+id/activity_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:enabled="false"
                android:text="@string/search"
...
