<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/copyright_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="TODO"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/nyt_copyright" />

    <TextView
        android:id="@+id/text_copyright_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/copyright"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_normal" />

    <Button
        android:id="@+id/dialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/close"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>